Mon Jan 11 16:52:31 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.2.1 (stable) released.

Wed Jan  6 02:42:08 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* bignum.c (Init_Bignum): forgot to define Bignum#===.

	* gc.c (gc_sweep): if add_heap() is called during GC, objects on
	  allocated heap page(s) are not marked, should not be recycled.

	* gc.c (gc_sweep): should refer latest freelist.

Mon Dec 28 18:54:17 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* gc.c (obj_free): better C_ALLOCA support.

	* eval.c (rb_eval): should not dump core with "#{}".

Fri Dec 25 13:07:46 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.2 (stable) released.

Fri Dec 25 11:56:51 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* gc.c (gc_mark): proper scanning for temporary region.

	* eval.c (TMP_ALLOC): protection for C_ALLOCA was broken.

Wed Dec  9 13:37:12 1998  MAEDA shugo  <shugo@aianet.ne.jp>

	* pack.c (encodes): use buffering for B-encoding.

	* pack.c (pack_pack): Q-encoding by 'M'.

Mon Dec  7 18:24:50 1998  WATANABE Tetsuya  <tetsu@jpn.hp.com>

	* ruby.c (set_arg0): $0 supprt for HP-UX.

Mon Dec  7 01:30:28 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* dln.c (dln_strerror): better error messages on win32.

Thu Dec  3 16:50:17 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ext/extmk.rb.in (realclean): trouble on install.

Sun Nov 29 22:25:39 1998  Takaaki Tateishi  <ttate@jaist.ac.jp>

	* process.c (f_exec): check number of argument.

Thu Nov 26 17:27:30 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1c9 released.

Wed Nov 25 13:07:12 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (yycompile): reduce known memory leak (hard to remove).

Sat Nov 21 18:44:06 1998  Masaki Fukushima  <fukusima@goto.info.waseda.ac.jp>

	* time.c (time_s_now): had memory leak.

	* ext/md5/md5init.c (md5_new): had memory leak.

	* ext/md5/md5init.c (md5_clone): ditto.
